feat(i18n): 修復首頁語言路徑與切換，完善多語言導航
- 修正 getLangFromUrl 支援 base 路徑
- Header 語言切換連結正確
- 首頁自動重定向到預設語言
- 新增 docs/blog-workflow.md、env.example、blog 自動化腳本
- 預設作者與目錄優化為繁體中文與 ccc333bbb

--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "blog:create": "node scripts/create-blog.js",
+    "blog:publish": "node scripts/publish-blog.js",
+    "blog:list": "node scripts/list-blogs.js"
   },
   "dependencies": {
-    "astro": "^5.10.0"
+    "astro": "^5.10.0",
+    "@octokit/rest": "^22.0.0",
+    "dotenv": "^16.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.0.0"
   }
 }
