--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "blog:list": "node scripts/list-blogs.js"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
     "@octokit/rest": "^22.0.0",
     "astro": "^5.10.0",
-    "dotenv": "^16.4.0",
-    "typescript": "^5.8.3"
+    "dotenv": "^16.4.0"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0"
+    "@astrojs/check": "^0.9.4",
+    "@types/node": "^22.0.0",
+    "typescript": "^5.8.3"
   }
 }
