feat(comments): migrate from GitHub Issues to Giscus
- Replace custom API-based comments with Giscus Discussions
- Add GiscusComments component for all published articles
- Update documentation for new comment system
- Remove old Comments component and API routes
- Ensure static site compatibility for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro",
     "blog:create": "node scripts/create-blog.js",
     "blog:publish": "node scripts/publish-blog.js",
-    "blog:list": "node scripts/list-blogs.js"
+    "blog:list": "node scripts/list-blogs.js",
+    "comments:create": "node scripts/create-comment-issues.js",
+    "comments:test": "node scripts/test-comments.js"
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
