fix: comprehensive critical issues resolution
- Centralize configuration system (site.ts, navigation.ts)
- Eliminate all hardcoded values across components
- Fix directory structure inconsistency (remove zh-tw, standardize to en/zh/tw)
- Refactor Navigation component (100+ lines → ~20 lines)
- Add comprehensive error handling and input validation
- Enhance scripts with multi-language support
- Improve TypeScript integration with proper types
- Add validation utilities and frontmatter parsing
- Update GitHub API with better error handling
- Create documentation for all changes

Breaking changes:
- Removed src/pages/zh-tw/ directory
- Navigation component API updated to use centralized config

Benefits:
- Easy configuration management in one place
- Better maintainability and type safety
- Robust error handling and validation
- Consistent multi-language support
- Faster development workflow

--- a/env.example
+++ b/env.example
@@ -7,5 +7,9 @@
 GITHUB_TOKEN=your_github_personal_access_token_here
 
 # GitHub 倉庫信息 (可選，有預設值)
+# 注意：現在使用統一的配置系統，這些值也在 src/config/site.ts 中定義
 GITHUB_OWNER=ccc333bbb
-GITHUB_REPO=capricious-centauri 
+GITHUB_REPO=memo
+
+# 開發環境設置
+NODE_ENV=development 
