feat: 添加 GitHub Token 權限測試和診斷工具
- 創建 token 權限測試腳本
- 更新環境變量示例，添加詳細權限說明
- 解決 Giscus App 安裝的 token 權限問題
- 提供完整的權限診斷和解決方案

--- a/env.example
+++ b/env.example
@@ -3,7 +3,10 @@
 
 # GitHub Personal Access Token
 # 生成地址: https://github.com/settings/tokens
-# 需要權限: repo (完整的倉庫訪問權限)
+# 需要權限: 
+#   - repo (完整的倉庫訪問權限)
+#   - write:discussion (創建和管理討論)
+#   - read:org (讀取組織數據，如果倉庫在組織中)
 GITHUB_TOKEN=your_github_personal_access_token_here
 
 # GitHub 倉庫信息 (可選，有預設值)
